# github-telegram-notifier-bot

./: pyproject.toml  requirements.txt
src/: config.py  main.py
src/github/models/: commit.py  discussion.py  discussion_comment.py  issue.py  issue_comment.py  label.py  pull_request.py  repository.py  user.py
src/telegram/: bot.py
